fix: resolve issue with immutable collection operation
* also add clear cart method